# isen-todo-rs

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md
migration/: init.sql
src/: error.rs  main.rs  server.rs
src/model/: db.rs  list.rs  mod.rs  task.rs  user.rs
src/repository/: error.rs  list.rs  mod.rs  pool.rs  repository.rs  task.rs  user.rs
src/util/: mod.rs  password_hash.rs
