[package]
name = "todo"
version = "0.1.0"
authors = ["Youn Mélois <youn@melois.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-sdk = { version = "0.6.0", features = ["storage"] }
parking_lot = { version = "0.12.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "sqlite",
    "migrate",
    "chrono",
    "uuid",
], optional = true }
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:sqlx", "dep:parking_lot"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
